welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:17: error: ')' expected but ';' found.
    setPos(nb%7,nb-7*(nb%7);
                           ^